# ChangeLog for x11-misc/numlockx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/numlockx/ChangeLog,v 1.32 2010/12/28 01:27:40 ranger Exp $

  28 Dec 2010; Brent Baude <ranger@gentoo.org> numlockx-1.2.ebuild:
  stable ppc64, bug 339726

  14 Oct 2010; Brent Baude <ranger@gentoo.org> numlockx-1.2.ebuild:
  stable ppc, bug 339726

  12 Oct 2010; Raúl Porcel <armin76@gentoo.org> numlockx-1.2.ebuild:
  alpha/sparc stable wrt #339726

  10 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> numlockx-1.2.ebuild:
  x86 stable wrt bug #339726

  06 Oct 2010; Markos Chandras <hwoarang@gentoo.org> numlockx-1.2.ebuild:
  Stable on amd64 wrt bug #339726

*numlockx-1.2 (28 May 2010)

  28 May 2010; Markos Chandras <hwoarang@gentoo.org> +numlockx-1.2.ebuild:
  Version bump. Fixes bug #312585

  07 Jun 2007; Raúl Porcel <armin76@gentoo.org> numlockx-1.1.ebuild:
  alpha stable wrt #180462, thanks to Tobias Klausmann for testing

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org> numlockx-1.1.ebuild:
  x86 stable wrt #180462

  01 Jun 2007; nixnut <nixnut@gentoo.org> numlockx-1.1.ebuild:
  Stable on ppc wrt bug 180462

  31 May 2007; Christoph Mende <angelos@gentoo.org> numlockx-1.1.ebuild:
  Stable on amd64 wrt bug 180462

  31 May 2007; Tom Gall <tgall@gentoo.org> numlockx-1.1.ebuild:
  stable on ppc64

  31 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> numlockx-1.1.ebuild:
  Stable on sparc wrt #180462

  31 May 2007; Samuli Suominen <drac@gentoo.org> numlockx-1.1.ebuild:
  Cleanup.

*numlockx-1.1 (10 Apr 2007)

  10 Apr 2007; Krzysiek Pawlik <nelchael@gentoo.org> +numlockx-1.1.ebuild:
  Version bump, see bug #172891.

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  13 Dec 2005; Doug Goldstein <cardoe@gentoo.org> numlockx-1.0.ebuild:
  adding modular X depends

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> numlockx-1.0.ebuild: