@@ -1,6 +1,18 @@
-DIST numlockx-1.1.tar.gz 75777 RMD160 1a905c8f3213d32f563e7d2135d5c20d528e99e4 SHA1 5c48276839ae108e2fa6dc2293ebfd87d83e45fd SHA256 e00ce02ffe425e3095665ac44e496a0b6ca82dfe4dc816d3bee95489337c5877
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST numlockx-1.2.tar.gz 82703 RMD160 543555fa47d63c9ffcc7fa56f0f9d8de055f7ebd SHA1 0bc24c61a6bcbdaff3215b3c5c120e7d9142b1bf SHA256 e468eb9121c94c9089dc6a287eeb347e900ce04a14be37da29d7696cbce772e4
-EBUILD numlockx-1.1.ebuild 901 RMD160 f4d0df2bc41d3a27a7cf873e6d8141fd341e42c9 SHA1 47bf1a05bb9d41ca0999d0bd909d48231e378ead SHA256 78f198418ff68a0effeb414cbbfa877cef4c45afcacf9609e448cf575f984418
 EBUILD numlockx-1.2.ebuild 900 RMD160 6683e5d60086aa2ef5e108467a7e39a277540017 SHA1 9cd716e37615954a3de573cb2418fe587303d00c SHA256 8dcceb83698d960ae229768e48de374ed45a0a812dfa9f33e2afbe6ea5b59b86
-MISC ChangeLog 3397 RMD160 374d8de3dd658883d39f5026a8d35e2d43d88c19 SHA1 81f7ae72603edee0b973eb37976c4f6c7cebd168 SHA256 d8febe2dbed04d4d656172c5e2a050cb5f3ed02d11b325346f07fcea7ccf0ff4
+MISC ChangeLog 3483 RMD160 d51c8fff213d0172880cc33b6fc5b4087fd66520 SHA1 1067b5094cc33c35ed0f9eb0a5932971a9a23c9b SHA256 f66197e42d7b6dde1f4d9791158605db9c98e2087ba8ca02b27a0655db760e6f
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPstTFAAoJEEdUh39IaPFNyeUH/1hxWo6bdFIXhlVh4xvf+sji
+zwLa9c/YtJI2Ji5vF+ymPn54HkCTP9zXlZRIravo39SaVURQiW8fdBgFn695XnId
+DYY6hwkETpodSic5rjoWtt3ZCsiC3iS5BiOoaXcbok8qb+Sh3UiHRW5Rc0UZgByF
+UYXZzDDOOdRpZLLLGuhQ+x0Eu4cqONrp7DIOHjlbw9/8BVPiosAXcML93YJgP+Kg
+yXYfJxj0JCaI96euHd7qeymXZr9DSTl44ehjOytNh/5Hz+hVPnA87d2V3w2cw4HH
+qluaqlWSApHzNc7U6WbJsa3M4mf3CqZbEcIiGCePDBwbCbUvdTi2ne3UN47hF+M=
+=VAVz
+-----END PGP SIGNATURE-----
