@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/numlockx
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/numlockx/ChangeLog,v 1.32 2010/12/28 01:27:40 ranger Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/numlockx/ChangeLog,v 1.33 2012/05/15 22:15:04 ssuominen Exp $
+
+  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> -numlockx-1.1.ebuild:
+  old
 
   28 Dec 2010; Brent Baude <ranger@gentoo.org> numlockx-1.2.ebuild:
   stable ppc64, bug 339726
